change sonar-project.properties organization tag

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=114ec91a787ff4e47e7914419366e7cdc2292b33
-sonar.organization=EduMelo
+sonar.organization=edumelo
 
 # This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=devopslab
