--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.projectName=devopslab
 sonar.sources=app.py
 
 # Encoding of the source code. Default is default system encoding
-sonar.sourceEncoding=UTF-8
+#sonar.sourceEncoding=UTF-8
 
 sonar.language=py
-sonar.python.version=3.8
+sonar.python.version=3.10
