--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=EduMelo_devopslab
-sonar.organization=EduMelo
+sonar.organization=edumelo
 
 # This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=devopslab
