Check properties file

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Unit Test
         run: python -m unittest -v test
 
+      - name: Check properties file
+        run: cat sonar-project.properties
+
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
