Check sonar token

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Check sonar token
         run: |
-          cat ${{ secrets.SONAR_TOKEN }} >> token
+          echo ${{ secrets.SONAR_TOKEN }} >> token
           cat token
 
       - name: SonarCloud Scan
