--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,16 @@
 [tox]
-envlist = py37
+envlist = py39
 skipsdist = True
  
 [testenv]
 deps =
     pytest
     coverage
-commands = pytest --cov=app.py --cov-report=xml --cov-config=tox.ini --cov-branch
+commands =
+    coverage run -m pytest
+    coverage xml
  
 [coverage:run]
+relative_files = True
+source = app.py
+branch = True
