Set coverage with other syntax

--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,20 @@
 [tox]
-envlist = py39
+envlist = 
+    py{27,35,36,37,38,39,310}
+
 skipsdist = True
  
 [testenv]
+passenv = CI GITHUB_WORKFLOW
+
 deps =
     pytest
     coverage
+
 commands =
-    coverage run -m pytest
+    coverage run --append --source=devopslab app.py test
     coverage xml
  
 [coverage:run]
 relative_files = True
-source = $GITHUB_WORKSPACE
 branch = True
