set test.py as runner file

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ deps =
     coverage
 
 commands =
-    coverage run --append --source=devopslab app.py test
+    coverage run --append --source=devopslab test.py
     coverage xml
  
 [coverage:run]
