--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ deps =
     coverage
 
 commands =
-    coverage run --append --source=devopslab test.py
+    coverage run --append --source=devopslab test.py app
     coverage xml
  
 [coverage:run]
